welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: illegal start of simple expression
  }
  ^has271:12: error: Unmatched closing brace '}' ignored here
 }
 ^